# FFmpeg

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/lyman/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/lyman/ffmpeg/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/lyman/ffmpeg/: ExampleUnitTest.java
audioplayer/: CMakeLists.txt  build.gradle
audioplayer/src/androidTest/java/com/lyman/audioplayer/: ExampleInstrumentedTest.java
audioplayer/src/main/: AndroidManifest.xml
audioplayer/src/main/cpp/: audio_player.cpp  com_lyman_audioplayer_MainActivity.h
audioplayer/src/main/java/com/lyman/audioplayer/: MainActivity.java
audioplayer/src/main/res/layout/: activity_main.xml
audioplayer/src/main/res/values/: strings.xml
audioplayer/src/test/java/com/lyman/audioplayer/: ExampleUnitTest.java
camerapreview/: build.gradle
camerapreview/src/androidTest/java/com/lyman/camerapreview/: ExampleInstrumentedTest.java
camerapreview/src/main/: AndroidManifest.xml
camerapreview/src/main/cpp/: LPreviewScheduler.cpp  com_lyman_camerapreview_preview_LPreviewScheduler.h
camerapreview/src/main/cpp/camera_preview/: mv_recording_preview_controller.cpp
camerapreview/src/main/cpp/libcommon/: CommonTools.h  thread.cpp
camerapreview/src/main/cpp/libcommon/egl_core/: gl_tools.h
camerapreview/src/main/cpp/libcommon/opengl_media/texture_copier/: texture_frame_copier.h
camerapreview/src/main/java/com/lyman/camerapreview/: MainActivity.java
camerapreview/src/main/java/com/lyman/camerapreview/preview/: CameraConfigInfo.java  CameraParamSettingException.java  LPreviewScheduler.java  LPreviewView.java  LVideoCamera.java
camerapreview/src/main/res/values/: strings.xml
camerapreview/src/test/java/com/lyman/camerapreview/: ExampleUnitTest.java
camerapreviewrecord/: CMakeLists.txt  build.gradle  local.properties
camerapreviewrecord/gradle/wrapper/: gradle-wrapper.properties
camerapreviewrecord/src/androidTest/java/com/lyman/camerapreviewrecord/: ExampleInstrumentedTest.java
camerapreviewrecord/src/main/: AndroidManifest.xml
camerapreviewrecord/src/main/cpp/: LPreviewScheduler.cpp  com_lyman_camerapreview_preview_LPreviewScheduler.h
camerapreviewrecord/src/main/cpp/camera_preview/: mv_recording_preview_controller.cpp  mv_recording_preview_controller.h
camerapreviewrecord/src/main/cpp/video_encoder/: live_video_packet_queue.cpp  live_video_packet_queue.h  video_encoder_adapter.cpp  video_encoder_adapter.h
camerapreviewrecord/src/main/cpp/video_encoder/hw_encoder/: hw_encoder_adapter.cpp  hw_encoder_adapter.h
camerapreviewrecord/src/main/cpp/video_encoder/soft_encoder/: host_gpu_copier.h  soft_encoder_adapter.cpp  soft_encoder_adapter.h  video_x264_encoder.cpp  video_x264_encoder.h  yuy2_video_frame_pool.cpp  yuy2_video_frame_pool.h
camerapreviewrecord/src/main/cpp/video_encoder/soft_encoder/color_conversion/: color_conversion.h
camerapreviewrecord/src/main/java/com/lyman/camerapreviewrecord/: MainActivity.java
camerapreviewrecord/src/main/java/com/lyman/camerapreviewrecord/encoder/: MediaCodecSurfaceEncoder.java
camerapreviewrecord/src/main/java/com/lyman/camerapreviewrecord/preview/: CameraConfigInfo.java  CameraParamSettingException.java  LPreviewScheduler.java  LPreviewView.java  LVideoCamera.java
camerapreviewrecord/src/main/res/layout/: activity_main.xml
camerapreviewrecord/src/main/res/values/: strings.xml
camerapreviewrecord/src/test/java/com/lyman/camerapreviewrecord/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
videoplayer/: CMakeLists.txt  build.gradle
videoplayer/src/androidTest/java/com/lyman/videoplayer/: ExampleInstrumentedTest.java
videoplayer/src/main/: AndroidManifest.xml
videoplayer/src/main/cpp/: PngPreviewController.cpp  com_lyman_videoplayer_PngPreviewController.h  video_player.cpp
videoplayer/src/main/cpp/libcommon/: CommonTools.h
videoplayer/src/main/cpp/librenderer/: image.h  pic_preview_controller.cpp  pic_preview_controller.h  pic_preview_render.h  pic_preview_texture.h  png_decoder.cpp
videoplayer/src/main/java/com/lyman/videoplayer/: MainActivity.java  PngPreviewController.java
videoplayer/src/main/res/layout/: activity_main.xml
videoplayer/src/main/res/values/: strings.xml
videoplayer/src/test/java/com/lyman/videoplayer/: ExampleUnitTest.java
